tests/files/type_checker_tests/should_pass/354.cmdr
//Test simple function type checks
fn add(a: int, b: float): float {
    return a + b;
}
