tests/files/type_checker_tests/should_fail/060.cmdr
//Should fail if return bindings don't match return type
fn foo(x: int, y: float): bool {
    println x + y;
}
